# moveit_pro_training_ws

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md
doc/: 01_installation.md  01_installing_moveit_studio.md  02_creating_objectives.md  03_configuration_packages.md  04_custom_behaviors.md  05_calling_external_services.md  06_moveit_task_constructor.md  07_running_objectives_from_python.md
src/apriltag_ros_msgs/: package.xml
src/apriltag_ros_msgs/srv/: GetAprilTagDetections.srv
src/apriltag_ros_python/: README.md  package.xml  setup.py
src/apriltag_ros_python/launch/: apriltag_detection_client.launch.py  apriltag_detection_server.launch.py
src/convert_mesh_to_poses/: CMakeLists.txt  behavior_plugin.yaml  convert_mesh_to_poses_plugin_description.xml  package.xml
src/convert_mesh_to_poses/config/: tree_nodes_model.xml
src/convert_mesh_to_poses/src/: convert_mesh_to_poses.cpp  register_behaviors.cpp
src/convert_mesh_to_poses/test/: test_behavior_plugins.cpp
src/for_each_stamped_pose/: CMakeLists.txt  behavior_plugin.yaml  for_each_stamped_pose_plugin_description.xml  package.xml
src/for_each_stamped_pose/config/: tree_nodes_model.xml
src/for_each_stamped_pose/src/: for_each_stamped_pose.cpp  register_behaviors.cpp
src/for_each_stamped_pose/test/: test_behavior_plugins.cpp
src/ik_batch/: CMakeLists.txt  behavior_plugin.yaml  ik_batch_plugin_description.xml  package.xml
src/ik_batch/config/: tree_nodes_model.xml
src/ik_batch/src/: ik_batch.cpp  register_behaviors.cpp
src/ik_batch/test/: test_behavior_plugins.cpp
src/moveit_studio_training_behaviors/: CMakeLists.txt  behavior_plugin.yaml  moveit_studio_training_behaviors_plugin_description.xml  package.xml
src/moveit_studio_training_behaviors/config/: tree_nodes_model.xml
src/moveit_studio_training_behaviors/include/moveit_studio_training_behaviors/: get_apriltag_detection_pose.hpp  offset_pose.hpp  setup_mtc_pick_apriltag.hpp  setup_mtc_pick_from_pose.hpp  transform_pose.hpp
src/moveit_studio_training_behaviors/src/: get_apriltag_detection_pose.cpp  offset_pose.cpp  register_behaviors.cpp  setup_mtc_pick_apriltag.cpp  setup_mtc_pick_from_pose.cpp  transform_pose.cpp
src/moveit_studio_training_behaviors/test/: CMakeLists.txt  test_behavior_plugins.cpp
src/read_yaml_and_create_stamped_pose_vector/: CMakeLists.txt  behavior_plugin.yaml  package.xml  read_yaml_and_create_stamped_pose_vector_plugin_description.xml
src/read_yaml_and_create_stamped_pose_vector/config/: tree_nodes_model.xml
src/read_yaml_and_create_stamped_pose_vector/include/read_yaml_and_create_stamped_pose_vector/: read_yaml_and_create_stamped_pose_vector.hpp
src/read_yaml_and_create_stamped_pose_vector/src/: read_yaml_and_create_stamped_pose_vector.cpp  register_behaviors.cpp
src/read_yaml_and_create_stamped_pose_vector/test/: test_behavior_plugins.cpp
src/solution_get_apriltag_detection_pose/: package.xml
src/solution_get_apriltag_detection_pose/config/: tree_nodes_model.xml
src/solution_get_apriltag_detection_pose/src/: get_apriltag_detection_pose.cpp
src/solution_get_apriltag_detection_pose/test/: test_behavior_plugins.cpp
src/solution_offset_pose/: package.xml
src/solution_offset_pose/config/: tree_nodes_model.xml
src/solution_offset_pose/src/: register_behaviors.cpp
src/solution_offset_pose/test/: test_behavior_plugins.cpp
src/solution_setup_mtc_pick_from_pose/: package.xml
src/solution_setup_mtc_pick_from_pose/config/: tree_nodes_model.xml
src/solution_setup_mtc_pick_from_pose/src/: setup_mtc_pick_from_pose.cpp
src/solution_setup_mtc_pick_from_pose/test/: test_behavior_plugins.cpp
src/solution_ur_gazebo_config/: CMakeLists.txt  README.md  package.xml
src/solution_ur_gazebo_config/config/: site_config.yaml
src/solution_ur_gazebo_config/description/: space_station_apriltag_world.sdf  ur5e_gazebo.xacro
src/tutorial_empty/: CMakeLists.txt
src/tutorial_new/: CMakeLists.txt
src/tutorial_new/objectives/: hello_world.xml
src/ur_base_config/: package.xml
src/ur_base_config/config/: base_config.yaml  config.yaml
src/ur_base_config/description/: environment.xacro  robot.urdf  ur5e.xacro  ur_attachments_macro.xacro
src/ur_base_config/launch/: hardware.launch.py
src/ur_base_config/objectives/: cycle_between_waypoints.xml  detect_and_transform_april_tag_pose.xml  detect_april_tag_pose.xml  detect_april_tags.xml  inspect_surface.xml  looping_pick_and_place_object.xml  move_to_named_pose.xml  move_to_waypoint.xml  pick_apriltag.xml  pick_apriltag_annotated_object.xml  pick_apriltag_config.yaml  pick_from_pose_config.yaml  pick_place_object.xml  poses.yaml  protected_move_to_pose.xml  (+12 more)
src/ur_gazebo_config/: README.md  package.xml
src/ur_gazebo_config/config/: SOLUTION_cfg.yaml  SOLUTION_site_config.yaml  config.yaml  site_config.yaml
src/ur_gazebo_config/config/calibration/: calibrate.yaml  calibration_poses.yaml  capture.yaml
src/ur_gazebo_config/config/moveit/: ur5e_gazebo.srdf  ur5e_gazebo_servo.yaml
src/ur_gazebo_config/description/: simulation_scene.urdf.xacro  space_station_apriltag_world.sdf  ur5e_gazebo.xacro  ur5e_with_scene_camera_gazebo.xacro
src/ur_gazebo_config/launch/sim/: SOLUTION_hardware_sim.launch.py  hardware_sim.launch.py  hardware_sim_cameras_apriltag.launch.py
src/ur_gazebo_config/objectives/: calibrate_with_checkerboard.xml
src/ur_hardware_config/: package.xml
src/ur_hardware_config/config/: config.yaml  site_config.yaml
src/ur_hardware_config/config/moveit/: picknik_007_ur5e.srdf
src/ur_hardware_config/description/: picknik_007_ur5e.xacro
src/ur_hardware_config/waypoints/: waypoints.yaml
src/ur_site_config/: README.md  package.xml
src/ur_site_config/objectives/: solution_detect_april_tag_pose_and_pick_object.xml  solution_pick_apriltag_annotated_object_subtree.xml
starter_files/: copy_files.bash  copy_files.sh  package.xml  start_moveit_setup_assistant.sh
starter_files/config/: config.yaml
starter_files/description/: gripper_and_camera.xacro  robot.urdf  ur5e.xacro
ur_site_config/config/: site_config.yaml
(+10 files in other folders)
