<?xml version="1.0"?>
<package format="3">
  <name>ur_gazebo_config</name>
  <version>4.0.0</version>

  <description>Configuration package for a UR5e simulated using Gazebo.</description>

  <maintainer email="hello@picknik.ai">MoveIt Pro Maintainer</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ur_base_config</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
