<?xml version="1.0"?>
<package format="3">
  <name>ur_site_config</name>
  <version>2.5.0</version>

  <description>Site configuration package for a UR5e that can be simulated with mock hardware</description>

  <maintainer email="studio.maintainers@picknik.ai">MoveIt Studio Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ur_base_config</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
